@@ -20,6 +20,7 @@ $SIG{TERM} = sub { print "$0: Terminated\n"; unlink $oled_lock or die $!; };
 
 my $pi = RPi::WiringPi->new(
     label => 'oled display date/time',
+    rpi_register => 0,
     shm_key => 'rpit'
 );
 
